--- a/assets/css/styles-6.css
+++ b/assets/css/styles-6.css
@@ -10,7 +10,7 @@
 /* ======= Base ======= */
 body {
   font-family: 'Roboto', sans-serif;
-  color: #545E6C;
+  color: #545e6c;
   background: #f5f5f5;
   font-size: 14px;
   padding: 30px;
@@ -43,7 +43,7 @@ p {
   line-height: 1.5;
 }
 .wrapper {
-  background: #4B6A78;
+  background: #4b6a78;
   max-width: 1000px;
   margin: 0 auto;
   position: relative;
@@ -52,7 +52,7 @@ p {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 .sidebar-wrapper {
-  background: #4B6A78;
+  background: #4b6a78;
   position: absolute;
   right: 0;
   width: 280px;
@@ -84,7 +84,9 @@ p {
 }
 .sidebar-wrapper .profile {
   margin-bottom: 15px;
-   border-radius: 150px;
+  border-radius: 150px;
+  width: 100px;
+  height: 100px;
 }
 .sidebar-wrapper .contact-list .fa {
   margin-right: 5px;
@@ -200,7 +202,7 @@ p {
   margin-bottom: 2px;
 }
 .main-wrapper .job-title {
-  color: #3F4650;
+  color: #3f4650;
   font-size: 16px;
   margin-top: 0;
   margin-bottom: 0;
@@ -210,11 +212,11 @@ p {
   position: absolute;
   right: 0;
   top: 0;
-  color: #97AAC3;
+  color: #97aac3;
 }
 .main-wrapper .company {
   margin-bottom: 10px;
-  color: #97AAC3;
+  color: #97aac3;
 }
 .main-wrapper .project-title {
   font-size: 16px;
@@ -251,7 +253,7 @@ p {
 }
 .footer .copyright {
   line-height: 1.6;
-  color: #545E6C;
+  color: #545e6c;
   font-size: 13px;
 }
 .footer .fa-heart {
